feat(rtl): add start and end text-align for alert and picker
references #5035

--- a/src/components/alert/alert.scss
+++ b/src/components/alert/alert.scss
@@ -118,5 +118,6 @@ ion-alert input {
   font-size: inherit;
   line-height: initial;
   text-align: left;
+  text-align: start;
   background: transparent;
 }
