--- a/src/components/picker/picker.scss
+++ b/src/components/picker/picker.scss
@@ -95,6 +95,7 @@ ion-picker-cmp {
   max-width: 50%;
 
   text-align: right;
+  text-align: end;
   white-space: nowrap;
 }
 
@@ -107,6 +108,7 @@ ion-picker-cmp {
   max-width: 50%;
 
   text-align: left;
+  text-align: start;
   white-space: nowrap;
 }
 
